--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-query": "^5.62.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
