feat(deploy)!: Vercel에서 Lightsail로 배포 환경 마이그레이션
프론트엔드 배포 환경을 Vercel에서 자체 호스팅 서버(Lightsail)로 이전합니다.

- PM2 설정 추가 (ecosystem.config.js)
- Nginx 서버 블록 설정 업데이트
- GitHub Actions 배포 워크플로우 구성
- SSL 인증서(Let's Encrypt) 적용
- DNS A 레코드 설정 변경

BREAKING CHANGE: 기존 Vercel 배포 방식에서 Lightsail 자체 호스팅으로 변경되어
배포 프로세스가 완전히 달라집니다.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vite preview --port 5173",
     "test": "vitest",
     "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 stop spooky-town",
+    "restart": "pm2 restart spooky-town"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
