--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,4 +55,5 @@ jobs:
             pm2 delete spooky-town || true
             pm2 start npm --name "spooky-town" -- run preview
             pm2 save
-            sudo /opt/bitnami/ctlscript.sh restart nginx
+            sudo /opt/bitnami/ctlscript.sh stop nginx
+            sudo /opt/bitnami/ctlscript.sh start nginx
