--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,8 @@ jobs:
           script: |
             cd /home/bitnami/spooky-town
             pnpm install
+            # dist 폴더 존재 확인
+            ls -la dist
             pm2 delete spooky-town || true
             pm2 start npm --name "spooky-town" -- run preview
             pm2 save
